--- a/docker/.env
+++ b/docker/.env
@@ -1,5 +1,5 @@
 
-DOCKER_REPO=thingsboard
+DOCKER_REPO=ip
 
 PERFORMANCE_TESTS_DOCKER_NAME=performance-tests
 
@@ -9,14 +9,14 @@ REST_URL=localhost:9090
 REST_USERNAME=tenant@thingsboard.org
 REST_PASSWORD=tenant
 
-MQTT_HOST=localhost
+MQTT_HOST=10.1.0.151
 MQTT_PORT=1883
 
 DEVICE_API=MQTT
 DEVICE_START_IDX=0
 DEVICE_END_IDX=10
-DEVICE_CREATE_ON_START=true
-DEVICE_DELETE_ON_COMPLETE=true
+DEVICE_CREATE_ON_START=false
+DEVICE_DELETE_ON_COMPLETE=false
 
 PUBLISH_COUNT=10
 PUBLISH_PAUSE=1000
