--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -31,14 +31,14 @@ ENV REST_URL=localhost:9090
 ENV REST_USERNAME=tenant@thingsboard.org
 ENV REST_PASSWORD=tenant
 
-ENV MQTT_HOST=localhost
+ENV MQTT_HOST=10.1.0.151
 ENV MQTT_PORT=1883
 
 ENV DEVICE_API=MQTT
 ENV DEVICE_START_IDX=0
 ENV DEVICE_END_IDX=10
-ENV DEVICE_CREATE_ON_START=true
-ENV DEVICE_DELETE_ON_COMPLETE=true
+ENV DEVICE_CREATE_ON_START=false
+ENV DEVICE_DELETE_ON_COMPLETE=false
 
 ENV PUBLISH_COUNT=10
 ENV PUBLISH_PAUSE=1000
